src/objects/Territory__c.object
<CustomObject>
    <description>SHAPE - Territories are aligned to AM as a define owner.</description>
    <fields>
        <fullName>Share_Node_Id__c</fullName>
        <description>Cisco SHARE Node ID</description>
        <label>Share Node ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Share_Node_Name__c</fullName>
        <description>Cisco SHARE Node Name</description>
        <label>Share Node Name</label>
        <length>254</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerritoryId__c</fullName>
        <description>Unique ID represent each territory</description>
        <displayFormat>{0000}</displayFormat>
        <label>Territory ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Territory_Type__c</fullName>
        <description>Type of a territory</description>
        <inlineHelpText>Select territory type corresponding to the territory you are creating</inlineHelpText>
        <label>Territory Type</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Channel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WebEx_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary Territory owner of a territory</description>
        <label>WebEx Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Territory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>TerritoryId__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Territory_Type__c</columns>
        <columns>Share_Node_Id__c</columns>
        <columns>Share_Node_Name__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>WAM_on_Territory</fullName>
        <active>true</active>
        <description>Require user to select a WebEx Account Manager to save a territory</description>
        <errorConditionFormula>OR(ISNULL( WebEx_Account_Manager__c),  ISBLANK( WebEx_Account_Manager__c))</errorConditionFormula>
        <errorDisplayField>WebEx_Account_Manager__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
</CustomObject>